--- a/productos.html
+++ b/productos.html
@@ -5,36 +5,121 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Productos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <!-- NAVBAR igual que en index -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Mi Sitio</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="menu">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link active" href="productos.html">Productos</a></li>
+          <li class="nav-item"><a class="nav-link" href="sobre.html">Sobre nosotros</a></li>
+          <li class="nav-item"><a class="nav-link" href="login.html">Log In</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
   <!-- GRID DE PRODUCTOS -->
   <div class="container my-5">
     <h1 class="text-center mb-4">Nuestros Productos</h1>
-    <div class="row">
+    <div class="row g-4">
+      
+      <!-- Producto 1 -->
       <div class="col-md-4">
         <div class="card">
-          <img src="https://picsum.photos/300/200?6" class="card-img-top" alt="producto1">
+          <img src="https://picsum.photos/300/200?1" class="card-img-top" alt="producto1">
           <div class="card-body">
             <h5 class="card-title">Producto 1</h5>
-            <p class="card-text">Descripción breve del producto.</p>
+            <p class="card-text">Descripción breve del producto 1.</p>
             <a href="login.html" class="btn btn-primary">Comprar</a>
           </div>
         </div>
       </div>
-      <!-- Copiar más cards según lo necesites -->
+
+      <!-- Producto 2 -->
+      <div class="col-md-4">
+        <div class="card">
+          <img src="https://picsum.photos/300/200?2" class="card-img-top" alt="producto2">
+          <div class="card-body">
+            <h5 class="card-title">Producto 2</h5>
+            <p class="card-text">Descripción breve del producto 2.</p>
+            <a href="login.html" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Producto 3 -->
+      <div class="col-md-4">
+        <div class="card">
+          <img src="https://picsum.photos/300/200?3" class="card-img-top" alt="producto3">
+          <div class="card-body">
+            <h5 class="card-title">Producto 3</h5>
+            <p class="card-text">Descripción breve del producto 3.</p>
+            <a href="login.html" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Producto 4 -->
+      <div class="col-md-4">
+        <div class="card">
+          <img src="https://picsum.photos/300/200?4" class="card-img-top" alt="producto4">
+          <div class="card-body">
+            <h5 class="card-title">Producto 4</h5>
+            <p class="card-text">Descripción breve del producto 4.</p>
+            <a href="login.html" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Producto 5 -->
+      <div class="col-md-4">
+        <div class="card">
+          <img src="https://picsum.photos/300/200?5" class="card-img-top" alt="producto5">
+          <div class="card-body">
+            <h5 class="card-title">Producto 5</h5>
+            <p class="card-text">Descripción breve del producto 5.</p>
+            <a href="login.html" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Producto 6 -->
+      <div class="col-md-4">
+        <div class="card">
+          <img src="https://picsum.photos/300/200?6" class="card-img-top" alt="producto6">
+          <div class="card-body">
+            <h5 class="card-title">Producto 6</h5>
+            <p class="card-text">Descripción breve del producto 6.</p>
+            <a href="login.html" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
+
+  <!-- FOOTER -->
   <footer>
-  <div class="container">
-    <p>&copy; 2025 Mi Sitio Web | Todos los derechos reservados</p>
-    <p>
-      <a href="index.html">Inicio</a> |
-      <a href="productos.html">Productos</a> |
-      <a href="sobre.html">Sobre nosotros</a> |
-      <a href="login.html">Log In</a>
-    </p>
-  </div>
-</footer>
+    <div class="container">
+      <p>&copy; 2025 Mi Sitio Web | Todos los derechos reservados</p>
+      <p>
+        <a href="index.html">Inicio</a> |
+        <a href="productos.html">Productos</a> |
+        <a href="sobre.html">Sobre nosotros</a> |
+        <a href="login.html">Log In</a>
+      </p>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
